force-app/main/default/objects/Meter__c/Meter__c.object-meta.xml
<CustomObject>
    <description>Represents Meter record in EAutomate</description>
    <label>Meter</label>
    <nameField>
        <displayFormat>M-{0000}</displayFormat>
        <label>Meter ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>