force-app/main/default/objects/Meter__c/fields/Avg_12_Mo_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_12_Mo_Volume__c</fullName>
    <label>Avg 12 Mo Volume</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>