force-app/main/default/objects/Meter__c/fields/Avg_3_Mo_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_3_Mo_Volume__c</fullName>
    <label>Avg 3 Mo Volume</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>