force-app/main/default/objects/Meter__c/fields/Avg_Install_Volume__c.field-meta.xml
<CustomField>
    <fullName>Avg_Install_Volume__c</fullName>
    <label>Avg Install Volume</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>