force-app/main/default/objects/Meter__c/fields/EA_Last_Modified__c.field-meta.xml
<CustomField>
    <fullName>EA_Last_Modified__c</fullName>
    <label>EA Last Modified</label>
    <type>DateTime</type>
</CustomField>