force-app/main/default/objects/Meter__c/fields/EA_MeterID__c.field-meta.xml
<CustomField>
    <fullName>EA_MeterID__c</fullName>
    <label>EA MeterID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>