force-app/main/default/objects/Meter__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>TSGADX__Equipment__c</referenceTo>
    <relationshipLabel>Meters</relationshipLabel>
    <relationshipName>Meters</relationshipName>
    <type>Lookup</type>
</CustomField>